dashboard_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: navdashboard.com
      http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: kubernetes-dashboard 
                port:
                  number: 80
